started responisve view, linked JS file

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       content=">Web Developer with expertise in JavaScript, React, Redux and Node.js."
     />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/queries.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -49,7 +50,10 @@
           </ul>
         </div>
       </nav>
-      <div class="header-section-container">
+    </header>
+    <main>
+      <!-- Header Section -->
+      <section class="header">
         <div class="header-text-container">
           <h2 class="heading-primary">
             Affordable Everyday Clothing,
@@ -74,9 +78,8 @@
             alt="Groom taking picture of bride"
           /> -->
         </div>
-      </div>
-    </header>
-    <main>
+      </section>
+      <!-- About Section -->
       <section class="about">
         <div class="about-text-container">
           <h2 class="heading-primary about-us-text">About Us</h2>
@@ -94,7 +97,7 @@
       </section>
       <section class="collection-container">
         <div class="collection">
-          <h2 class="heading-primary">Our Collection</h2>
+          <h2 class="heading-primary coll-text">Our Collection</h2>
           <div class="collection-gallery">
             <figure class="gallery-item gallery-1">
               <img
@@ -197,8 +200,11 @@
           <li class="footer-link-items"><a href="#">Terms of Service</a></li>
           <li class="footer-link-items"><a href="#">Cookie Settings</a></li>
         </ul>
-        <p>&copy; <span>2027</span>Breezeway.All rights reserved.</p>
+        <p>
+          &copy; <span class="year">2027 </span> Breezeway.All rights reserved.
+        </p>
       </div>
     </footer>
   </body>
+  <script src="./js/script.js"></script>
 </html>
