--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     <title>Breezeway</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <h2 class="header-logo">Breeze<span class="way">way</span></h2>
+    <header class="header">
+      <h2 class="header-logo">Breeze<span class="way">way</span></h2>
+      <nav class="main-nav">
         <div class="nav-main-container">
-          <ul class="nav-list-container">
+          <ul class="nav-items">
             <li class="list-items">
               <a href="#Home" class="list-items-link home">Home</a>
             </li>
@@ -50,10 +50,14 @@
           </ul>
         </div>
       </nav>
+      <button class="btn-mobile-nav">
+        <ion-icon class="icon-mobile-nav" name="menu-outline"></ion-icon>
+        <ion-icon class="icon-mobile-nav" name="close-outline"></ion-icon>
+      </button>
     </header>
     <main>
       <!-- Header Section -->
-      <section class="header">
+      <section>
         <div class="header-text-container">
           <h2 class="heading-primary">
             Affordable Everyday Clothing,
