--- a/index.html
+++ b/index.html
@@ -158,7 +158,9 @@
             <ion-icon class="contact-icon" name="location-outline"></ion-icon>
             <p class="contact-title">Location</p>
             <p>Reach us at</p>
-            <address>456 Fashion Ave, New York, NY 10001</address>
+            <address>
+              456 Fashion Ave, <span class="newYork">New York, NY 10001</span>
+            </address>
           </div>
         </div>
       </section>
