--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
         <div class="nav-main-container">
           <ul class="nav-items">
             <li class="list-items">
-              <a href="#Home" class="list-items-link home">Home</a>
+              <a href="#" class="list-items-link home">Home</a>
             </li>
             <li class="list-items">
-              <a href="#About" class="list-items-link">About Us</a>
+              <a href="#about" class="list-items-link">About Us</a>
             </li>
             <li class="list-items">
-              <a href="#Collection" class="list-items-link">Collection</a>
+              <a href="#collection" class="list-items-link">Collection</a>
             </li>
             <li class="list-items">
-              <a href="#Contact" class="list-items-link">Contact Us</a>
+              <a href="#contact" class="list-items-link">Contact Us</a>
             </li>
             <button class="nav-button">
               Shop Now <ion-icon name="cart-outline"></ion-icon>
@@ -57,7 +57,7 @@
     </header>
     <main>
       <!-- Header Section -->
-      <section>
+      <section class="section-hero">
         <div class="header-text-container">
           <h2 class="heading-primary">
             Affordable Everyday Clothing,
@@ -84,7 +84,7 @@
         </div>
       </section>
       <!-- About Section -->
-      <section class="about">
+      <section class="about" id="about">
         <div class="about-text-container">
           <h2 class="heading-primary about-us-text">About Us</h2>
           <div class="text-about">
@@ -99,7 +99,7 @@
           </div>
         </div>
       </section>
-      <section class="collection-container">
+      <section class="collection-container" id="collection">
         <div class="collection">
           <h2 class="heading-primary coll-text">Our Collection</h2>
           <div class="collection-gallery">
@@ -139,7 +139,7 @@
           <button class="collection-button">Shop Now</button>
         </div>
       </section>
-      <section class="contact-us">
+      <section class="contact-us" id="contact">
         <h2 class="heading-primary contact-text">Contact Us</h2>
         <div class="contact-items-container">
           <div class="contact-items">
