added click to logo

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
   </head>
   <body>
     <header class="header">
-      <h2 class="header-logo">Breeze<span class="way">way</span></h2>
+      <a href="#" class="breeze"
+        ><h2 class="header-logo">Breeze<span class="way">way</span></h2></a
+      >
       <nav class="main-nav">
         <div class="nav-main-container">
           <ul class="nav-items">
@@ -167,7 +169,11 @@
       <section class="section-call-to-action">
         <div class="cta-content-container">
           <div class="cta-text">
-            <h2 class="cta-text-head">Breeze<span class="way">way</span></h2>
+            <a href="#" class="breeze"
+              ><h2 class="cta-text-head">
+                Breeze<span class="way">way</span>
+              </h2></a
+            >
             <ul class="cta-link-container">
               <li class="cta-link-item"><a href="#">Shop Now</a></li>
               <li class="cta-link-item"><a href="#about">About Us</a></li>
